# kg-aec

./: .gitignore  README.md  pyproject.toml
notebooks/: Heterogeneous_Knowledge_Graphs.ipynb  KG_GNN_AEC.ipynb
