[tool.poetry]
name = "aec-kg"
version = "0.1.0"
description = "Presentation for Knowledge Graphs in AEC"
authors = ["Manos Argyris <manos0088@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
torch-geometric = "^2.3.1"
yfiles-jupyter-graphs = "^1.4.5"
rdflib = "^6.3.2"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
transformers = "^4.29.2"
ipykernel = "^6.23.1"
pandas = "^2.0.2"
pyg-lib = {git = "https://github.com/pyg-team/pyg-lib.git"}
toolz = "^0.12.0"
gdown = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
