[tool.poetry]
name = "kg-aec"
version = "0.1.0"
description = "presentation"
authors = ["Manos Argyris <manos0088@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
yfiles-jupyter-graphs = "^1.4.5"
rdflib = "^6.3.2"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
ipykernel = "^6.23.1"
pandas = "^2.0.2"
toolz = "^0.12.0"
gdown = "^4.7.1"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
nbformat = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
